# stack-vm

./: .gitignore  CMakeLists.txt  README.md  executor.h  instructions.h  main.cpp  parser.cpp  parser.h  utils.h
io/: io.h  loader.cpp
preprocessing/: preprocessing.cpp  preprocessing.h
resources/: add.sv  add.toy  div.toy  mul.toy  sub.toy
src/: executor.cpp  executor.h  instructions.h  main.cpp  parser.cpp  parser.h  utils.h
src/io/: io.h  loader.cpp
src/preprocessing/: Preprocessing.h  preprocessing.cpp  validation.cpp
